# taller2

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  correrUnitTests.sh  correr_pruebas_API.sh  doxygen  instalar.sh  instalar_cppunit.sh  instalar_dependencias.sh  instalar_dependenciasTravis.sh  instalar_googletest.sh  instalar_rocksdb.sh
Appserver/: CMakeLists.txt
Appserver/Coverage/: coverage.info  index-sort-f.html  index-sort-l.html  index.html
Appserver/Coverage/servicios/: BaseDeDatos.cpp.func-sort-c.html  BaseDeDatos.cpp.func.html  BaseDeDatos.cpp.gcov.html  Conversaciones.cpp.func-sort-c.html  Conversaciones.cpp.func.html  Conversaciones.cpp.gcov.html  CredencialesDeUsuarios.cpp.func-sort-c.html  CredencialesDeUsuarios.cpp.func.html  CredencialesDeUsuarios.cpp.gcov.html  JsonArray.cpp.func-sort-c.html  JsonArray.cpp.func.html  JsonArray.cpp.gcov.html  JsonArray.h.func-sort-c.html  JsonArray.h.func.html  JsonArray.h.gcov.html  JsonObject.cpp.func-sort-c.html  JsonObject.cpp.func.html  JsonObject.cpp.gcov.html  JsonValor.cpp.func-sort-c.html  JsonValor.cpp.func.html  JsonValor.cpp.gcov.html  JsonValor.h.func-sort-c.html  JsonValor.h.func.html  JsonValor.h.gcov.html  MensajeHTTP.cpp.func-sort-c.html  MensajeHTTP.cpp.func.html  MensajeHTTP.cpp.gcov.html  MensajeHTTPReply.cpp.func-sort-c.html  MensajeHTTPReply.cpp.func.html  MensajeHTTPReply.cpp.gcov.html  MensajeHTTPRequest.cpp.func-sort-c.html  MensajeHTTPRequest.cpp.func.html  MensajeHTTPRequest.cpp.gcov.html  Mensajes.cpp.func-sort-c.html  Mensajes.cpp.func.html  Mensajes.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
Appserver/Coverage/src/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
Appserver/Coverage/src/servicios/: BaseDeDatos.cpp.func-sort-c.html  BaseDeDatos.cpp.func.html  BaseDeDatos.cpp.gcov.html  ClienteDelSharedServer.cpp.func-sort-c.html  ClienteDelSharedServer.cpp.func.html  ClienteDelSharedServer.cpp.gcov.html  Conversaciones.cpp.func-sort-c.html  Conversaciones.cpp.func.html  Conversaciones.cpp.gcov.html  CreatorChat.cpp.func-sort-c.html  CreatorChat.cpp.func.html  CreatorChat.cpp.gcov.html  CreatorLogin.cpp.func-sort-c.html  CreatorLogin.cpp.func.html  CreatorLogin.cpp.gcov.html  CreatorRegistro.cpp.func-sort-c.html  CreatorRegistro.cpp.func.html  CreatorRegistro.cpp.gcov.html  CreatorServicio.cpp.func-sort-c.html  CreatorServicio.cpp.func.html  CreatorServicio.cpp.gcov.html  CreatorServicioMensajes.cpp.func-sort-c.html  CreatorServicioMensajes.cpp.func.html  CreatorServicioMensajes.cpp.gcov.html  CredencialesDeUsuarios.cpp.func-sort-c.html  CredencialesDeUsuarios.cpp.func.html  CredencialesDeUsuarios.cpp.gcov.html  FactoryServicios.cpp.func-sort-c.html  FactoryServicios.cpp.func.html  FactoryServicios.cpp.gcov.html  JsonArray.cpp.func-sort-c.html  JsonArray.cpp.func.html  JsonArray.cpp.gcov.html  JsonArray.h.func-sort-c.html  JsonArray.h.func.html  JsonArray.h.gcov.html  JsonObject.cpp.func-sort-c.html  JsonObject.cpp.func.html  JsonObject.cpp.gcov.html  JsonValor.cpp.func-sort-c.html  (+83 more)
Appserver/Coverage/src/servidor/: Servidor.cpp.func-sort-c.html  Servidor.cpp.func.html  Servidor.cpp.gcov.html  index-sort-f.html  index-sort-l.html  index.html
Appserver/Test/: correrUnitTestYMostrarCoverage.sh  correrUnitTests.sh  correr_pruebas_API.sh
Appserver/Test/ApiUnitTesting/: AppServerApiUnitTests.py  Utilities.py  testBusquedaCandidatos.py  testChat.py  testLogin.py  testPerfil.py  usuario.json  usuarioCompleto.json
Appserver/Test/ApiUnitTesting/ArchivosIniciales/: usuario.json  usuarioCompleto.json  usuarioSinEmail.json  usuarioSinEmailYSinIntereses.json
Appserver/Test/ApiUnitTesting/ArchivosRequests/: .travis.yml  prueba.py
Appserver/Test/ApiUnitTesting/EntornoDeTesting/: README
Appserver/Test/UnitTests/: CMakeLists.txt  README  generarCoverage.sh  gtest_main.cc
Appserver/Test/UnitTests/TestCases/: BaseDeDatosTests.cpp  CandidatosTests.cpp  ConversacionesTests.cpp  CredencialesDeUsuariosTests.cpp  EstadisticasCandidatosTests.cpp  InteresesTests.cpp  JsonValoresTests.cpp  ListadoInteresesTests.cpp  ListadoUsuariosTests.cpp  MensajeHTTPReplyTests.cpp  MensajeHTTPRequestTests.cpp  ParejaTest.cpp  SesionesDeUsuariosTests.cpp  SharedDataBaseTests.cpp  UsuariosTests.cpp
Appserver/constantes/: compile.sh  constantes.cpp  constantesTests.cpp  out
Appserver/src/: CMakeLists.txt  main.cpp
Appserver/src/constantes/: constantes.hpp  constantes.json  out
Appserver/src/servicio/: servicio.cpp
Appserver/src/servicios/: AdministradorCandidatos.cpp  AdministradorCandidatos.h  AtendedorHTTP.cpp  AtendedorHTTP.h  BaseDeDatos.cpp  BaseDeDatos.h  CMakeLists.txt  Candidatos.cpp  Candidatos.h  ClienteDelSharedServer.cpp  ClienteDelSharedServer.h  ConstantesEventosServicios.h  Conversaciones.cpp  Conversaciones.h  CreatorActualizarPosicion.cpp  CreatorActualizarPosicion.h  CreatorBusquedaCandidato.cpp  CreatorBusquedaCandidato.h  CreatorChat.cpp  CreatorChat.h  CreatorEditarPerfil.cpp  CreatorEditarPerfil.h  CreatorEliminacion.cpp  CreatorEliminacion.h  CreatorLogin.cpp  CreatorLogin.h  CreatorLogout.cpp  CreatorLogout.h  CreatorModificarFoto.cpp  CreatorModificarFoto.h  CreatorPedirInformacion.cpp  CreatorPedirInformacion.h  CreatorPedirIntereses.cpp  CreatorPedirIntereses.h  CreatorRegistro.cpp  CreatorRegistro.h  CreatorServicio.cpp  CreatorServicio.h  CreatorServicioMensajes.cpp  CreatorServicioMensajes.h  (+109 more)
Appserver/src/servidor/: CMakeLists.txt  Servidor.cpp  Servidor.h  servidor.cpp  servidor.h
Appserver/testDeUnaClase/: CMakeLists (copy).txt  CMakeLists.txt  HttpMessageRequestTest.cpp  compile.sh
Appserver/testDeUnaClase/PruebasCmake/: CMakeLists.txt  HttpMessageRequestTest.cpp  README~
Appserver/testDeUnaClase/servicios/: ConstantesEventosServicios.h  MensajeHTTPRequest.cpp
app_server/: CMakeLists.txt  CMakeLists.txt~  README
app_server/lib/json/: CMakeLists.txt
app_server/lib/mongoose/: CMakeLists.txt
app_server/src/: CMakeLists.txt  CMakeLists.txt~  WebServer.cpp  WebServer.h  main.cpp
(+1643 files in other folders)
